All/K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: hoangnguyen260189/commandservice:latest
          ports:
            - containerPort: 8080
# REQUIRED!!!!! - make sure you seperate the deployment from the Cluster IP config with: ---
# you can put it in a separate file if you want, 
#but make sure to use the --- to separate the two configs  
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80  # Port của Service (bên trong Cluster)
      targetPort: 8080  # Port của Container (.NET 9)
