All/K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-db
              mountPath: /var/opt/mssql/data
      volumes:
        - name: mssql-db
          persistentVolumeClaim:
            claimName: mssql-claim  #name of the PVC (metadata.name)defined in local-pvc.yaml
  
# Cluster IP Service for mssql-depl for communication with other services in the cluster
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1433  # Port của Service (bên trong Cluster)
      targetPort: 1433  # Port của Container (SQL Server)

# Load Balancer Service for mssql-depl for communication with other services outside the cluster
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433  # Port của Service (bên trong Cluster)
      targetPort: 1433  # Port của Container (SQL Server)
      # nodePort: 30433  # Port của Node (bên ngoài Cluster)
