All/K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: hoangnguyen260189/platformservice:latest
          ports:
            - containerPort: 8080
# REQUIRED!!!!! - make sure you seperate the deployment from the Cluster IP config with: ---
# you can put it in a separate file if you want, 
#but make sure to use the --- to separate the two configs  
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80  # Port của Service (bên trong Cluster)
      targetPort: 8080  # Port của Container (.NET 9)
    - name: platformgrpc
      protocol: TCP
      port: 666  # Port của Service (bên trong Cluster)
      targetPort: 666  # Port của Container
