All/K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80  # Port của Service (bên trong Cluster)
      targetPort: 8080  # Port của Container (.NET 9)
      # nodePort: 30080  # port mở trên Node — phải nằm trong range 30000-32767
